--- a/IMSTests/Info.plist
+++ b/IMSTests/Info.plist
@@ -16,6 +16,8 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>NSCameraUsageDescription</key>
+	<string>扫码商品条码、添加商品图片</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 </dict>
