--- a/IMS/Info.plist
+++ b/IMS/Info.plist
@@ -48,5 +48,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>给商品添加图片</string>
 </dict>
 </plist>
